k8s/7-worker-gke.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: yaonet
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
      annotations:
        iam.gke.io/gcp-service-account: gke-yaonet-sa@yaonet-487821.iam.gserviceaccount.com
    spec:
      serviceAccountName: yaonet-ksa
      containers:
      - name: worker
        image: asia-east1-docker.pkg.dev/yaonet-487821/yaonet/yaonet:latest
        imagePullPolicy: IfNotPresent
        command: ["./boot.sh"]
        args: ["rq", "worker", "yaonet-tasks"]
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - worker
              topologyKey: kubernetes.io/hostname
