k8s/7-worker-minikube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: yaonet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: yaonet:latest
        imagePullPolicy: Never
        command: ["./boot.sh"]
        args: ["rq", "worker", "yaonet-tasks"]
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "100m"
