k8s/7-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: yaonet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: achillesly/yaonet:latest
        imagePullPolicy: IfNotPresent
        command: ["./boot.sh"]
        args: ["rq", "worker", "yaonet-tasks"]
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        volumeMounts:
        - name: app-storage
          mountPath: /home/yaonet
      volumes:
      - name: app-storage
        emptyDir: {}
