k8s/9-ingress-gke.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yaonet-ingress
  namespace: yaonet
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "yaonet-ip"
    networking.gke.io/managed-certificates: "yaonet-cert"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - host: "yaonet.example.com"
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: web
            port:
              number: 8000
status:
  loadBalancer:
    ingress:
    - ip: ""
